--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build and Release
+name: Build Executables
 
 on:
   push:
@@ -58,34 +58,3 @@ jobs:
         with:
           name: anyGIF-linux
           path: dist/anyGIF
-
-  create_release:
-    runs-on: ubuntu-latest
-    needs: [build_windows, build_linux]  # Wait for the build jobs to finish
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3  # Updated to the latest version
-
-      - name: Create Release
-        id: create_release
-        uses: softprops/action-gh-release@v1
-        with:
-          tag: ${{ github.ref }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Upload Windows artifact to release
-        uses: softprops/action-gh-release@v1
-        with:
-          tag: ${{ github.ref }}
-          files: dist/anyGIF.exe
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Upload Linux artifact to release
-        uses: softprops/action-gh-release@v1
-        with:
-          tag: ${{ github.ref }}
-          files: dist/anyGIF
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
